KURE 기반 AI 맛집 추천 시스템 재구축
- 기존 추천 구조를 KURE·TF-IDF 엔진 기반으로 전면 개편
- Document V2 및 공공데이터 근거 필터링 구조 도입
- 자연어 조건 분석, 점수 정규화, fallback 처리 보강
- 모델 검증·평가·테스트와 검색 상태 유지 기능 추가